GTest: Improve --help output

https://bugzilla.gnome.org/show_bug.cgi?id=550433